--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -7,3 +7,10 @@
 body {
   font-family: 'Montserrat', sans-serif;
 }
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
