--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,11 @@
 
 body {
   font-family: 'Montserrat', sans-serif; }
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); }
