--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,49 @@
 body {
   font-family: 'Montserrat', sans-serif; }
 
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%); }
+fieldset, img {
+  border: 0; }
+
+@-webkit-keyframes fadein {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@-moz-keyframes fadein {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@-o-keyframes fadein {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@keyframes fadein {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+.full-width-image {
+  height: 800px;
+  background: url("../images/shop-0.jpg") no-repeat center center fixed;
+  background-size: cover;
+  -webkit-animation: fadein 5s 1;
+  /* Safari 4+ */
+  -moz-animation: fadein 5s 1;
+  /* Fx 5+ */
+  -o-animation: fadein 5s 1;
+  /* Opera 12+ */
+  animation: fadein 5s 1;
+  /* IE 10+, Fx 29+ */
+  -webkit-filter: brightness(50%);
+  filter: brightness(50%); }
+
+.full-width-image-2 {
+  height: 500px;
+  background: url("../images/shop-1.jpg") no-repeat center center fixed;
+  background-size: cover; }
