--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import url("animations.css");
 #logo {
   height: 25px; }
 
@@ -8,42 +9,22 @@ body {
 fieldset, img {
   border: 0; }
 
-@-webkit-keyframes fadein {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-
-@-moz-keyframes fadein {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-
-@-o-keyframes fadein {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-
-@keyframes fadein {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-
 .full-width-image {
   height: 800px;
   background: url("../images/shop-0.JPG") no-repeat center center fixed;
   background-size: cover;
-  -webkit-animation: fadein 5s 1;
+  -webkit-animation: fadein 5s 1, darken 5s 1;
   /* Safari 4+ */
-  -moz-animation: fadein 5s 1;
+  -moz-animation: fadein 5s 1,  darken 5s 1;
   /* Fx 5+ */
-  -o-animation: fadein 5s 1;
+  -o-animation: fadein 5s 1,  darken 5s 1;
   /* Opera 12+ */
-  animation: fadein 5s 1;
+  animation: fadein 5s 1,  darken 5s 1;
   /* IE 10+, Fx 29+ */
+  /*-webkit-animation: darken 5s 1; /* Safari 4+ */
+  /*-moz-animation:    darken 5s 1; /* Fx 5+ */
+  /*-o-animation:      darken 5s 1; /* Opera 12+ */
+  /*animation:         darken 5s 1; /* IE 10+, Fx 29+ */
   -webkit-filter: brightness(50%);
   filter: brightness(50%); }
 
