--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -13,6 +13,14 @@ fieldset, img {
   border: 0;
 }
 
+.bg-black {
+  background-color: black;
+}
+
+.font-white {
+  color: white;
+}
+
 .full-width-image {
   height: 800px; // your specified height
   background: url("../images/shop-0.JPG") no-repeat center center fixed;
