--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,12 @@ body {
 fieldset, img {
   border: 0; }
 
+.bg-black {
+  background-color: black; }
+
+.font-white {
+  color: white; }
+
 .full-width-image {
   height: 800px;
   background: url("../images/shop-0.JPG") no-repeat center center fixed;
