--- a/css/animations.css
+++ b/css/animations.css
@@ -1,4 +1,4 @@
-//Fade In
+/*Fade In*/
 
 @-webkit-keyframes fadein {
   0%   { opacity: 0; }
@@ -17,21 +17,22 @@
   100% { opacity: 1; }
 }
 
-//Darken
+/*Slide Left*/
 
-@-webkit-keyframes darken {
-  0%   { filter: brightness(100%); }
-  100% { filter: brightness(50%); }
+@-webkit-keyframes slide-left {
+    100% { right: 40px; }
 }
-@-moz-keyframes darken {
-  0%   { filter: brightness(100%); }
-  100% { filter: brightness(50%); }
+
+@keyframes slide-left {
+    100% { right: 40px; }
 }
-@-o-keyframes darken {
-  0%   { filter: brightness(100%); }
-  100% { filter: brightness(50%); }
+
+/*Slide Left Subtitle*/
+
+@-webkit-keyframes slide-left-2 {
+    100% { right: 0; }
 }
-@keyframes darken {
-  0%   { filter: brightness(100%); }
-  100% { filter: brightness(50%); }
+
+@keyframes slide-left-2 {
+    100% { right: 0; }
 }
