--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -112,7 +112,7 @@ fieldset, img {
   align-items: flex-end;
   overflow-x: hidden;
   height: 850px;
-  background: url("../images/shop-2.JPG") no-repeat center center fixed;
+  background: url("../images/shop-2.jpg") no-repeat center center fixed;
   background-size: cover;
   .title {
     position: absolute;
