--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,7 @@ fieldset, img {
   align-items: flex-end;
   overflow-x: hidden;
   height: 850px;
-  background: url("../images/cambrils.jpg") no-repeat center center fixed;
+  background: url("../images/cambrils.JPG") no-repeat center center fixed;
   background-size: cover; }
   #content4 .title {
     position: absolute;
