--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -216,7 +216,7 @@ fieldset, img {
   align-items: flex-end;
   overflow-x: hidden;
   height: 850px;
-  background: url("../images/cambrils.jpg") no-repeat center center fixed;
+  background: url("../images/cambrils.JPG") no-repeat center center fixed;
   background-size: cover;
   .title {
     position: absolute;
