--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -1,9 +1,34 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('animations.css');
+
+@mixin sections {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  overflow: hidden;
+  height: 850px;
+  background-size: cover;
+  .title {
+    position: absolute;
+    top: 120px;
+    left: 180px;
+    color: white;
+    font-size: 100px;
+    font-weight: bold;
+  }
+  .subtitle {
+    position: absolute;
+    width: 1000px;
+    color: white;
+    padding-bottom: 75px;
+    padding-right: 50px;
+  }
+}
+
 #logo {
   height: 25px;
 }
-
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-@import url('animations.css');
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -13,36 +38,6 @@ body {
 fieldset, img {
   border: 0;
 }
-
-//Navbar
-
-/* change the background color */
-.navbar-custom {
-    background-color: rgba(255,255,255,.0);
-    position: relative;
-}
-/* change the brand and text color */
-.navbar-custom .navbar-brand,
-.navbar-custom .navbar-text {
-    color: rgba(255,255,255,.8);
-}
-/* change the link color */
-.navbar-custom .navbar-nav .nav-link {
-    color: rgba(255,255,255,.8);
-}
-/* change the color of active or hovered links */
-.navbar-custom .nav-item.active .nav-link,
-.navbar-custom .nav-item:hover .nav-link {
-    color: #ffffff;
-}
-.custom-toggler.navbar-toggler {
-    border-color: rgba(255,255,255,.0);
-}
-.custom-toggler .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
-
-//Below Navbar
 
 #content0 {
   position: relative;
@@ -80,141 +75,36 @@ fieldset, img {
 }
 
 #content1 {
-  position: relative;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  overflow-x: hidden;
-  height: 850px;
   background: url("../images/shop-nosotros.JPG") no-repeat center center fixed;
-  background-size: cover;
-  .title {
-    position: absolute;
-    top: 120px;
-    left: 180px;
-    color: white;
-    font-size: 100px;
-    font-weight: bold;
-  }
-  .subtitle {
-    position: absolute;
-    width: 1000px;
-    color: white;
-    padding-bottom: 75px;
-    padding-right: 50px;
-  }
+  @include sections;
 }
 
 #content21 {
-  position: relative;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  overflow-x: hidden;
-  height: 850px;
   background: url("../images/shop-2.jpg") no-repeat center center fixed;
-  background-size: cover;
-  .title {
-    position: absolute;
-    top: 120px;
-    left: 180px;
-    color: white;
-    font-size: 100px;
-    font-weight: bold;
-  }
-  .subtitle {
-    position: absolute;
-    width: 1000px;
-    color: white;
-    padding-bottom: 75px;
-    padding-right: 50px;
-  }
+  @include sections;
 }
 
 #content22 {
-  position: relative;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  overflow-x: hidden;
-  height: 850px;
   background: url("../images/shop-3.jpg") no-repeat center center fixed;
-  background-size: cover;
-  .title {
-    position: absolute;
-    top: 120px;
-    left: 180px;
-    color: white;
-    font-size: 100px;
-    font-weight: bold;
-  }
-  .subtitle {
-    position: absolute;
-    width: 1000px;
-    color: white;
-    padding-bottom: 75px;
-    padding-right: 50px;
-  }
+  @include sections;
 }
 
 #content23 {
-  position: relative;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  overflow-x: hidden;
-  height: 850px;
   background: url("../images/shop-4.jpg") no-repeat center center fixed;
-  background-size: cover;
-  .title {
-    position: absolute;
-    top: 120px;
-    left: 180px;
-    color: white;
-    font-size: 100px;
-    font-weight: bold;
-  }
-  .subtitle {
-    position: absolute;
-    width: 1000px;
-    color: white;
-    padding-bottom: 75px;
-    padding-right: 50px;
-  }
+  @include sections;
 }
 
 #content3 {
-  position: relative;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  overflow-x: hidden;
-  height: 850px;
   background: url("../images/shop-5.jpg") no-repeat center center fixed;
-  background-size: cover;
-  .title {
-    position: absolute;
-    top: 120px;
-    left: 180px;
-    color: white;
-    font-size: 100px;
-    font-weight: bold;
-  }
-  .subtitle {
-    position: absolute;
-    width: 1000px;
-    color: white;
-    padding-bottom: 75px;
-    padding-right: 50px;
-  }
+  @include sections;
 }
 
 #content4 {
   position: relative;
+  overflow: hidden;
   display: flex;
-  justify-content: flex-end;
   align-items: flex-end;
-  overflow-x: hidden;
+  justify-content: flex-end;
   height: 850px;
   background: url("../images/cambrils.JPG") no-repeat center center fixed;
   background-size: cover;
@@ -228,9 +118,16 @@ fieldset, img {
   }
   .subtitle {
     position: absolute;
-    width: 1000px;
+    width: 700px;
     color: white;
-    padding-bottom: 75px;
+    padding-bottom: 150px;
     padding-right: 50px;
+  }
+  #map {
+    position: absolute;
+    width: 700px;
+    height: 400px;
+    top: 300px;
+    left: 100px;
   }
 }
