--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -3,26 +3,24 @@
 
 @mixin sections {
   position: relative;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
   overflow: hidden;
-  height: 850px;
+  height: 60vw;
   background-size: cover;
   .title {
     position: absolute;
-    top: 120px;
-    left: 180px;
+    top: 5vw;
+    left: 10vw;
     color: white;
-    font-size: 100px;
+    font-size: 8vw;
     font-weight: bold;
   }
   .subtitle {
     position: absolute;
-    width: 1000px;
+    font-size: 1.7vw;
+    width: 80vw;
     color: white;
-    padding-bottom: 75px;
-    padding-right: 50px;
+    bottom: 10vw;
+    right: 5vw;
   }
 }
 
@@ -41,8 +39,8 @@ fieldset, img {
 
 #content0 {
   position: relative;
-  overflow-x: hidden;
-  height: 800px;
+  overflow: hidden;
+  height: 52vw;
   background: url("../images/shop-0.JPG") no-repeat center center fixed;
   background-size: cover;
   -webkit-animation: fadein 5s 1; /* Safari 4+ */
@@ -51,10 +49,10 @@ fieldset, img {
   animation:         fadein 5s 1; /* IE 10+, Fx 29+ */
 
   .title {
-    width: 40%;
+    width: 40vw;
     position: absolute;
-    right: -700px;
-    bottom: 150px;
+    right: -40vw;
+    bottom: 10vw;
     -webkit-animation: slide-left 0.5s forwards;
     -webkit-animation-delay: 3s;
     animation: slide-left 2s forwards;
@@ -62,10 +60,11 @@ fieldset, img {
   }
 
   .subtitle {
-    width: 385px;
+    width: 25vw;
+    font-size: 2vw;
     position: absolute;
-     bottom: 75px;
-     right: -700px;
+     bottom: 5vw;
+     right: -40vw;
      color: white;
      -webkit-animation: slide-left-2 0.5s forwards;
      -webkit-animation-delay: 3.3s;
@@ -105,29 +104,30 @@ fieldset, img {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  height: 850px;
+  height: 52vw;
   background: url("../images/cambrils.JPG") no-repeat center center fixed;
   background-size: cover;
   .title {
     position: absolute;
-    top: 120px;
-    left: 180px;
+    top: 5vw;
+    left: 10vw;
     color: white;
-    font-size: 100px;
+    font-size: 8vw;
     font-weight: bold;
   }
   .subtitle {
     position: absolute;
-    width: 700px;
+    font-size: 1.7vw;
+    width: 42vw;
     color: white;
-    padding-bottom: 150px;
-    padding-right: 50px;
+    bottom: 10vw;
+    right: 4vw;
   }
   #map {
     position: absolute;
-    width: 700px;
-    height: 400px;
-    top: 300px;
-    left: 100px;
+    width: 42vw;
+    height: 27vw;
+    top: 18vw;
+    left: 7vw;
   }
 }
