--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ fieldset, img {
 #content0 {
   position: relative;
   overflow: hidden;
-  height: 52vw;
+  height: 110vh;
   background: url("../images/shop-0.JPG") no-repeat center center fixed;
   background-size: cover;
   -webkit-animation: fadein 5s 1;
@@ -25,21 +25,21 @@ fieldset, img {
   animation: fadein 5s 1;
   /* IE 10+, Fx 29+ */ }
   #content0 .title {
-    width: 40vw;
+    width: 60vh;
     position: absolute;
-    right: -40vw;
-    bottom: 10vw;
+    right: -80vh;
+    bottom: 20vh;
     -webkit-animation: slide-left 0.5s forwards;
     -webkit-animation-delay: 3s;
     -webkit-animation: slide-left 2s forwards;
     animation: slide-left 2s forwards;
     animation-delay: 3s; }
   #content0 .subtitle {
-    width: 25vw;
-    font-size: 2vw;
+    width: 40vh;
+    font-size: 3vh;
     position: absolute;
-    bottom: 5vw;
-    right: -40vw;
+    bottom: 14vh;
+    right: -80vh;
     color: white;
     -webkit-animation: slide-left-2 0.5s forwards;
     -webkit-animation-delay: 3.3s;
@@ -52,139 +52,130 @@ fieldset, img {
   background: url("../images/shop-nosotros.JPG") no-repeat center center fixed;
   position: relative;
   overflow: hidden;
-  height: 60vw;
+  height: 110vh;
   background-size: cover; }
   #content1 .title {
     position: absolute;
-    top: 5vw;
+    top: 10vh;
     left: 10vw;
     color: white;
-    font-size: 8vw;
+    font-size: 10vh;
     font-weight: bold; }
   #content1 .subtitle {
     position: absolute;
-    font-size: 1.7vw;
-    width: 80vw;
+    font-size: 4vh;
+    width: 100vh;
     color: white;
-    bottom: 10vw;
-    right: 5vw; }
+    bottom: 10vh;
+    right: 1vw; }
 
 #content21 {
   background: url("../images/shop-2.jpg") no-repeat center center fixed;
   position: relative;
   overflow: hidden;
-  height: 60vw;
+  height: 110vh;
   background-size: cover; }
   #content21 .title {
     position: absolute;
-    top: 5vw;
+    top: 10vh;
     left: 10vw;
     color: white;
-    font-size: 8vw;
+    font-size: 10vh;
     font-weight: bold; }
   #content21 .subtitle {
     position: absolute;
-    font-size: 1.7vw;
-    width: 80vw;
+    font-size: 4vh;
+    width: 100vh;
     color: white;
-    bottom: 10vw;
-    right: 5vw; }
+    bottom: 10vh;
+    right: 1vw; }
 
 #content22 {
   background: url("../images/shop-3.jpg") no-repeat center center fixed;
   position: relative;
   overflow: hidden;
-  height: 60vw;
+  height: 110vh;
   background-size: cover; }
   #content22 .title {
     position: absolute;
-    top: 5vw;
+    top: 10vh;
     left: 10vw;
     color: white;
-    font-size: 8vw;
+    font-size: 10vh;
     font-weight: bold; }
   #content22 .subtitle {
     position: absolute;
-    font-size: 1.7vw;
-    width: 80vw;
+    font-size: 4vh;
+    width: 100vh;
     color: white;
-    bottom: 10vw;
-    right: 5vw; }
+    bottom: 10vh;
+    right: 1vw; }
 
 #content23 {
   background: url("../images/shop-4.jpg") no-repeat center center fixed;
   position: relative;
   overflow: hidden;
-  height: 60vw;
+  height: 110vh;
   background-size: cover; }
   #content23 .title {
     position: absolute;
-    top: 5vw;
+    top: 10vh;
     left: 10vw;
     color: white;
-    font-size: 8vw;
+    font-size: 10vh;
     font-weight: bold; }
   #content23 .subtitle {
     position: absolute;
-    font-size: 1.7vw;
-    width: 80vw;
+    font-size: 4vh;
+    width: 100vh;
     color: white;
-    bottom: 10vw;
-    right: 5vw; }
+    bottom: 10vh;
+    right: 1vw; }
 
 #content3 {
   background: url("../images/shop-5.jpg") no-repeat center center fixed;
   position: relative;
   overflow: hidden;
-  height: 60vw;
+  height: 110vh;
   background-size: cover; }
   #content3 .title {
     position: absolute;
-    top: 5vw;
+    top: 10vh;
     left: 10vw;
     color: white;
-    font-size: 8vw;
+    font-size: 10vh;
     font-weight: bold; }
   #content3 .subtitle {
     position: absolute;
-    font-size: 1.7vw;
-    width: 80vw;
+    font-size: 4vh;
+    width: 100vh;
     color: white;
-    bottom: 10vw;
-    right: 5vw; }
+    bottom: 10vh;
+    right: 1vw; }
 
 #content4 {
   position: relative;
   overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  height: 52vw;
+  height: 110vh;
   background: url("../images/cambrils.JPG") no-repeat center center fixed;
   background-size: cover; }
   #content4 .title {
     position: absolute;
-    top: 5vw;
+    top: 10vh;
     left: 10vw;
     color: white;
-    font-size: 8vw;
+    font-size: 10vh;
     font-weight: bold; }
   #content4 .subtitle {
     position: absolute;
-    font-size: 1.7vw;
-    width: 42vw;
+    font-size: 3vh;
+    width: 100vh;
     color: white;
-    bottom: 10vw;
-    right: 4vw; }
+    bottom: 8vh;
+    right: 1vw; }
   #content4 #map {
     position: absolute;
-    width: 42vw;
-    height: 27vw;
-    top: 18vw;
-    left: 7vw; }
+    width: 70vh;
+    height: 50vh;
+    top: 24vh;
+    left: 8vh; }
