--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ fieldset, img {
   #content1 .subtitle {
     position: absolute;
     font-size: 4vh;
-    width: 100vh;
+    width: 95vw;
     color: white;
     bottom: 10vh;
     right: 1vw; }
@@ -85,7 +85,7 @@ fieldset, img {
   #content21 .subtitle {
     position: absolute;
     font-size: 4vh;
-    width: 100vh;
+    width: 95vw;
     color: white;
     bottom: 10vh;
     right: 1vw; }
@@ -106,7 +106,7 @@ fieldset, img {
   #content22 .subtitle {
     position: absolute;
     font-size: 4vh;
-    width: 100vh;
+    width: 95vw;
     color: white;
     bottom: 10vh;
     right: 1vw; }
@@ -127,7 +127,7 @@ fieldset, img {
   #content23 .subtitle {
     position: absolute;
     font-size: 4vh;
-    width: 100vh;
+    width: 95vw;
     color: white;
     bottom: 10vh;
     right: 1vw; }
@@ -148,7 +148,7 @@ fieldset, img {
   #content3 .subtitle {
     position: absolute;
     font-size: 4vh;
-    width: 100vh;
+    width: 95vw;
     color: white;
     bottom: 10vh;
     right: 1vw; }
@@ -169,13 +169,14 @@ fieldset, img {
   #content4 .subtitle {
     position: absolute;
     font-size: 3vh;
-    width: 100vh;
+    width: 95vw;
     color: white;
-    bottom: 8vh;
-    right: 1vw; }
+    bottom: 0.5vh;
+    left: 1vh;
+    right: 1vh; }
   #content4 #map {
     position: absolute;
-    width: 70vh;
-    height: 50vh;
+    width: 80vw;
+    height: 49vh;
     top: 24vh;
-    left: 8vh; }
+    left: 10px; }
