--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -16,7 +16,7 @@
   }
   .subtitle {
     position: absolute;
-    font-size: 4vh;
+    font-size: 3.8vh;
     width: 95vw;
     color: white;
     bottom: 9vh;
@@ -101,7 +101,7 @@ fieldset, img {
 #content4 {
   position: relative;
   overflow: hidden;
-  height: 110vh;
+  height: 100vh;
   background: url("../images/cambrils.JPG") no-repeat center center fixed;
   background-size: cover;
   .title {
@@ -114,18 +114,17 @@ fieldset, img {
   }
   .subtitle {
     position: absolute;
-    font-size: 3vh;
+    font-size:2vh;
     width: 95vw;
     color: white;
-    bottom: 0.5vh;
+    bottom: 2vh;
     left: 1vh;
     right: 1vh;
   }
   #map {
     position: absolute;
-    width: 80vw;
+    width: 100%;
     height: 49vh;
     top: 24vh;
-    left: 10px;
   }
 }
