--- a/css/Sass/styles.scss
+++ b/css/Sass/styles.scss
@@ -126,6 +126,54 @@ fieldset, img {
 
 #content11 {
   @include sections;
+  .row {
+      display: -ms-flexbox; /* IE10 */
+      display: flex;
+      -ms-flex-wrap: wrap; /* IE10 */
+      flex-wrap: wrap;
+      padding: 0 4px;
+      padding-top: 160px;
+  }
+
+  /* Create four equal columns that sits next to each other */
+  .column {
+      -ms-flex: 25%; /* IE10 */
+      flex: 25%;
+      max-width: 25%;
+      padding: 0 4px;
+      img {
+        margin-top: 8px;
+        margin-bottom: 8px;
+        vertical-align: middle;
+      }
+      .title {
+        text-align: center;
+        font-weight: bold;
+        font-size: 20px;
+      }
+      .subtitle {
+        text-align: center;
+      }
+  }
+
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+      .column {
+          -ms-flex: 50%;
+          flex: 50%;
+          max-width: 50%;
+      }
+  }
+
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+      .column {
+          -ms-flex: 100%;
+          flex: 100%;
+          max-width: 100%;
+      }
+  }
+
 }
 
 #content21 {
@@ -241,13 +289,4 @@ footer {
   .mr-5 {
     margin-right: 0rem;
   }
-}
-
-// Large devices (desktops, less than 1200px)
-@media (max-width: 1199.98px) {
-
-}
-
-@media screen and (max-width: 870px) {
-
 }
