--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,10 @@ fieldset, img {
 #content11 {
   position: relative;
   overflow: hidden;
-  background-size: cover; }
+  background-size: cover;
+  /* Create four equal columns that sits next to each other */
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */ }
   #content11 #titulo {
     position: absolute;
     top: 9vh;
@@ -135,6 +138,45 @@ fieldset, img {
     font-size: 2.5vh;
     color: black;
     top: 25vh; }
+  #content11 .row {
+    display: -ms-flexbox;
+    /* IE10 */
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+    padding-top: 160px; }
+  #content11 .column {
+    -ms-flex: 25%;
+    /* IE10 */
+    -webkit-box-flex: 25%;
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px; }
+    #content11 .column img {
+      margin-top: 8px;
+      margin-bottom: 8px;
+      vertical-align: middle; }
+    #content11 .column .title {
+      text-align: center;
+      font-weight: bold;
+      font-size: 20px; }
+    #content11 .column .subtitle {
+      text-align: center; }
+  @media screen and (max-width: 800px) {
+    #content11 .column {
+      -ms-flex: 50%;
+      -webkit-box-flex: 50%;
+      flex: 50%;
+      max-width: 50%; } }
+  @media screen and (max-width: 600px) {
+    #content11 .column {
+      -ms-flex: 100%;
+      -webkit-box-flex: 100%;
+      flex: 100%;
+      max-width: 100%; } }
 
 #content21 {
   position: relative;
