--- a/css/animate.css
+++ b/css/animate.css
@@ -1581,12 +1581,14 @@
     opacity: 0;
     -webkit-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
+    left: 6%;
   }
 
   to {
     opacity: 1;
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
+    left: 6%;
   }
 }
 
@@ -1595,14 +1597,14 @@
     opacity: 0;
     -webkit-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
-    right: 65vw;
+    left: 6%;
   }
 
   to {
     opacity: 1;
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
-    right: 65vw;
+    left: 6%;
   }
 }
 
